# AI-Cloud-Quality-Scanner-Pipeline

./: .gitignore  LICENSE  Makefile  README.md  codeguru-security-results.json  nlp-results.json  pyproject.toml
.github/workflows/: ai_code_review_pipeline.yml  codeguru-reviewer.yml
automation/: codeguru_security.py  github_issues.py  nlp_comment_check.py
data/1-rest-api/: flaws.md  users_flawed.db
data/1-rest-api/flawed/: app.py
data/1-rest-api/flawless/: app.py
data/2-microservice-flow/: flaws.md
data/2-microservice-flow/flawed/auth_service/: app.py
data/2-microservice-flow/flawed/profile_service/: app.py
data/2-microservice-flow/flawless/auth_service/: app.py
data/2-microservice-flow/flawless/profile_service/: app.py
data/3-comments-nlp/: benchmark_comments.py  flaws.md
data/3-comments-nlp/bad_comments/: email_validator.py
data/3-comments-nlp/good_comments/: email_validator.py
geolocation_fraud/: data_analysis.ipynb
notebooks/: nlp-results.json  nlp_testing.ipynb
