[project]
name = "rest-api"
version = "0.1.0"
description = "Flask benchmark sample"
authors = [
    {name = "Henry-0810",email = "ml2002stduy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
